turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:28: error: type mismatch;
 found   : Int(0)
 required: Array[Int]
		case 0 =>
                     ^Turmite:29: error: type mismatch;
 found   : Int(1)
 required: Array[Int]
		case 1 => avance; 
                     ^Turmite:30: error: type mismatch;
 found   : Int(2)
 required: Array[Int]
		case 2 => gauche; avance;
                     ^Turmite:31: error: type mismatch;
 found   : Int(4)
 required: Array[Int]
		case 4 => droite; droite; avance;
                     ^Turmite:32: error: type mismatch;
 found   : Int(8)
 required: Array[Int]
		case 8 => droite; avance;
                     ^